<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_recent"
        android:enabled="true"
        android:icon="@drawable/recent"
        android:title="@string/recent"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_team"
        android:enabled="true"
        android:icon="@drawable/team_setting"
        android:title="@string/team"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_report"
        android:enabled="true"
        android:icon="@drawable/report"
        android:title="@string/report"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>