<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/venue"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:layout_height="56dp"
            android:hint="@string/venue" />

        <EditText
            android:id="@+id/referee_name"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:layout_height="56dp"
            android:hint="@string/referee_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="left"
            android:text="@string/home_or_away" />

        <Spinner
            android:id="@+id/spinner_home_or_away"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="left"
            android:text="@string/select_game_type" />

        <Spinner
            android:id="@+id/spinner_game_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="left"
            android:text="@string/select_opponent_team" />

        <Spinner
            android:id="@+id/spinner_opponent_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="left"
            android:text="@string/select_playing_players" />
        <ListView
            android:id="@+id/list_of_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />
    </LinearLayout>
</LinearLayout>