<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/playing_teams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:text="@string/buna_vs_st_george"
            android:layout_toEndOf="@id/partition"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <TextView
            android:id="@+id/live_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:text="@string/_1_0"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/minutes_played"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/minutes_played"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp" />

        <View
            android:id="@+id/partition"
            android:layout_width="1dp"
            android:layout_height="44dp"
            android:layout_marginRight="3dp"
            android:layout_toEndOf="@id/minutes_played"
            android:background="@color/colorAccent"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/live_or_ended"
            android:layout_width="wrap_content"
            android:text="@string/live"
            android:textSize="12sp"
            android:textColor="@color/green"
            android:layout_below="@id/playing_teams"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/partition"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/game_type_divider"
            android:layout_width="wrap_content"
            android:text="@string/dot_or_icon"
            android:textSize="12sp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_below="@id/playing_teams"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/live_or_ended"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/game_type_display"
            android:layout_width="wrap_content"
            android:text="@string/premier_league"
            android:textSize="12sp"
            android:layout_below="@id/playing_teams"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/game_type_divider"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>