<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/old_pin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/transparent"
            app:boxBackgroundColor="@color/transparent"
            app:errorEnabled="true"
            app:helperText="">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/old_pin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_pin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:boxBackgroundColor="@color/transparent"
            app:errorEnabled="true"
            app:helperText="">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmation_pin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:boxBackgroundColor="@color/transparent"
            app:errorEnabled="true"
            app:helperText="">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/set_new_pin"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/round_layout"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/set" />

            <Button
                android:id="@+id/cancel_pin_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/round_layout"
                android:textSize="12sp"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@+id/set_new_pin"
                android:text="@string/cancel" />

        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>