<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image"
                            android:layout_width="66dp"
                            android:layout_height="66dp"
                            android:layout_gravity="center"
                            android:src="@drawable/analyst_one"
                            app:civ_border_color="@color/colorPrimaryDark"
                            app:civ_border_width="2dp" />

                        <TextView
                            android:id="@+id/team_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/st_george"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/goal_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/_1"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="bottom"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/game_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingBottom="5dp"
                            android:text="@string/fri_jan_2020"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                        <TextView
                            android:id="@+id/game_start_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:lines="1"
                            android:text="@string/_4_09_pm"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/game_venue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:lines="1"
                            android:paddingBottom="10dp"
                            android:text="@string/addis_ababa"
                            android:textSize="12sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/opponent_team_icon"
                            android:layout_width="66dp"
                            android:layout_height="66dp"
                            android:layout_gravity="center"
                            android:src="@drawable/analyst_one"
                            app:civ_border_color="@color/colorPrimaryDark"
                            app:civ_border_width="2dp" />

                        <TextView
                            android:id="@+id/opponent_team_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/st_george"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/opponent_team_goal_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/_0"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_marginTop="10dp"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            app:tabSelectedTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>